# bezierv

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
.github/workflows/: ci.yml  documentation.yml
bezierv/: __init__.py
bezierv/algorithms/: conv_bezierv.py  interior_point.py  isotonic_reg.py  nelder_mead.py  nelder_mead2.py  non_linear.py  non_linear2.py  non_linear_solver.py  primal_grad.py  proj_grad.py  proj_subgrad.py  utils.py
bezierv/classes/: bezierv.py  convolver.py  distfit.py
bezierv/tests/: conf_test.py
bezierv/tests/test_algorithms/: test_nelder_mead.py  test_proj_grad.py
bezierv/tests/test_classes/: test_bezierv.py  test_distfit.py
docs/: faq.md  index.md  reference.md  tutorials.md
reference/: index.html
scripts/: another.py  app.py  benchmark_results.csv  benchmarks.ipynb  benchmarks.py  experiments.ipynb  hi.py  hola.py  interactive.py  new_tests.ipynb  nonsolv.py  other.py  test.ipynb  test_conv.ipynb  test_neldermead.ipynb  test_nonlinsolv.ipynb  test_projgrad.ipynb  test_random.py  test_random2.py  test_subgrad copy.ipynb  timing.py  wings.csv
tests/test_algorithms/: test_isotonic_reg.py  test_nelder_mead.py  test_nonlinear.py  test_proj_grad.py  test_proj_subgrad.py  test_utils.py
tests/test_classes/: conftest.py  test_bezierv.py  test_convolver.py  test_distfit.py
