[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bezierv"
authors = [
    {name = "Esteban Leiva", email = "e.leivam@uniandes.edu.co"},
    {name = "Andrés L. Medaglia", email = "amedagli@uniandes.edu.co"},
]
version = "0.1.0"
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.3",
    "pandas==2.3.0",
    "Pyomo==6.9.0", 
    "scipy==1.15.3",
    "statsmodels==0.14.4"
]